adding transition and animation

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 		<link href="assets/css/styles.css" rel="stylesheet" />
 	</head>
 	<body>
-		<h1>Hey</h1>
-		
+		<h1>Transition Test</h1>
+		<a class="anim-button draw" href="#">Home</a>
+		<h1>Animation Test</h1>
+		<a class="trans-button" href="#">Services</a>
 	</body>
 </html>
